--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "esbuild index.js --bundle --outfile=des/queue-of-promises.js",
     "browser-build": "esbuild index.js --bundle --minify --target=chrome58,firefox57,safari11,edge16 --outfile=des/queue-of-promises.js",
-    "test": "node tests/queue-of-promises.test.js"
+    "test": "node tests/queueOfPromises.test.js"
   },
   "repository": {
     "type": "git",
